--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-baseURL: https://example.com
-title: Your title
+baseURL: https://jacksprojects.netlify.app
+title: Jacksprojects Blog
 theme: hugo-theme-m10c
 paginate: 5
 menu:
